# yurn

./: .gitignore  CMakeLists.txt  app-menu.ui  example.json  exampleapp.c  exampleapp.gresource.xml  exampleapp.h  exampleappwin.c  exampleappwin.h  gamedata.c  gamedata.h  jsonparser.c  jsonparser.h  longer.json  main.c  window.glade  yurn.css  yurn.dot  yurn_state_machine.c  yurn_state_machine.h  yurnapp.c  yurnapp.gresource.xml  yurnapp.h  yurnappwin.c  yurnappwin.h
